--- a/entry_file/.gitignore
+++ b/entry_file/.gitignore
@@ -1,9 +1,9 @@
-# Python:
+#Python:
+__pycache__
+__init__.py
 *.py[cod]
 *.so
 *.egg
 *.egg-info
 *.gz
-bundke.js
-vendor.bundle.js
-node_modules
+migrations
