--- a/static/js/package.json
+++ b/static/js/package.json
@@ -35,12 +35,13 @@
     "style-loader": "^0.18.2",
     "url-loader": "^0.5.9",
     "webpack": "^3.6.0",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^2.8.2",
     "babel-plugin-import": "^1.5.0",
-    "webpack-hot-middleware": "^2.19.1"
+
   },
   "devDependencies": {
+    "webpack-hot-middleware": "^2.19.1",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-dev-server": "^2.8.2",
     "eslint": "^4.7.2",
     "redux-logger": "^3.0.6"
   }
